--- a/YoloV3/YoloObjectDetection.ipynb
+++ b/YoloV3/YoloObjectDetection.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "YoloObjectDetection.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sudhakarmlal/S13/blob/master/YoloV3/YoloObjectDetection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -2699,7 +2710,7 @@
         }
       },
       "source": [
-        "!ls '/content/gdrive/My Drive/YoloV3/data/customdata/Vedios/images'"
+        "!ls '/content/gdrive/My Drive/YoloV3/data/customdata/Vedios/imagespub'"
       ],
       "execution_count": 0,
       "outputs": [
